--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -45,6 +45,7 @@
      <Compile Include="Assets\Scripts\Layer2D.cs" />
      <Compile Include="Assets\Scripts\MyAssetPostProcessor.cs" />
      <Compile Include="Assets\Scripts\Player.cs" />
+     <Compile Include="Assets\Scripts\Respawn.cs" />
      <Compile Include="Assets\Scripts\Reverse.cs" />
      <Compile Include="Assets\Scripts\SceneMgr.cs" />
      <Compile Include="Assets\Scripts\TMXLoader.cs" />
