--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -44,7 +44,7 @@
      <Compile Include="Assets\Scripts\Grobal.cs" />
      <Compile Include="Assets\Scripts\Layer2D.cs" />
      <Compile Include="Assets\Scripts\MyAssetPostProcessor.cs" />
-     <Compile Include="Assets\Scripts\Player.cs" />
+     <Compile Include="Assets\Scripts\NewBehaviourScript.cs" />
      <Compile Include="Assets\Scripts\Respawn.cs" />
      <Compile Include="Assets\Scripts\Reverse.cs" />
      <Compile Include="Assets\Scripts\SceneMgr.cs" />
